@@ -11,7 +11,6 @@ source $locallib/upload-methods.sh
 source $locallib/actions.sh
 
 
-libdir="../lib"
 zip="/usr/bin/zip"
 bzip="/usr/bin/bzip2"
 gzip="/bin/gzip"
@@ -20,12 +19,17 @@ rsync="/usr/bin/rsync"
 mkisofs="/usr/bin/mkisofs"
 growisofs="/usr/bin/growisofs"
 cdrecord="/usr/bin/cdrecord"
-bmu="/usr/bin/backup-manager-upload"
-lockfile="/var/run/backup-manager.pid"
 md5sum="/usr/bin/md5sum"
 bc="/usr/bin/bc"
 mysqldump="/usr/bin/mysqldump"
 svnadmin="/usr/bin/svnadmin"
+
+libdir="../lib"
+bmu="../backup-manager-upload"
+lockfile="$PWD/backup-manager.pid"
+lockfile="$PWD/test.lock"
+
+conffile="confs/base.conf"
 version="false"
 force="false"
 upload="false"
@@ -33,8 +37,5 @@ burn="false"
 help="false"
 md5check="false"
 purge="false"
-
-lockfile="test.lock"
-conffile="confs/base.conf"
 warnings="false"
 verbose="false"
